# mini_project_repo

./: .gitignore  LICENSE  README.md  approach1.md  approach2.md  backup_requirements.txt  chat_memory.json  command_processor_pgSQL.py  commands.db  diagram.md  gui.py  keep_awake.py  main.py  note.txt  pyproject.toml  requirements.txt  run.py  sequences.db  sequences.db-shm  sequences.db-wal  setup.cfg  setup.py  structure.txt  test.md  theses description.txt  to_do_list.txt  voice_processor_pgSQL.py  ztry.py
assets/chat_memory/: chat_memory_oscik559.json
assets/config_cache/: noise_floor_cache.json
assets/db_backups/: backup_20250326_184405.sql  backup_2025Y03m26d_184428.sql  backup_250326_184450.sql  backup_250326_184806.sql  backup_250326_185213.sql  backup_250326_185236.sql  backup_250326_185330.sql  backup_250326_185414.sql  backup_250326_185521.sql  backup_250326_185529.sql  backup_250326_185602.sql  backup_250326_185610.sql  backup_250326_185832.sql  backup_250326_190423.sql  backup_250326_190452.sql  backup_250326_190736.sql  backup_250326_190846.sql  backup_250326_191239.sql  backup_250326_191331.sql  backup_250326_191440.sql  backup_250326_191500.sql  backup_250326_191527.sql  backup_250326_191914.sql  backup_250326_191934.sql  backup_250326_192222.sql  backup_250327_110649.sql  backup_250327_110728.sql  backup_250327_112437.sql  backup_250327_112441.sql  backup_250327_112506.sql  backup_250327_112528.sql  backup_250328_112632.sql  backup_250328_113021.sql  backup_250328_113656.sql  backup_250328_113858.sql  backup_250328_125936.sql  backup_250329_144959.sql  backup_250329_145407.sql  backup_250329_145959.sql  backup_250329_150512.sql  (+101 more)
assets/db_data/: sequences.db  sequences.db-shm  sequences.db-wal
assets/db_user_backups/: user_profile_backup_20250416_134201.json  user_profile_backup_20250416_134730.json  user_profile_backup_20250416_140636.json  user_profile_backup_20250416_145213.json  user_profile_backup_20250416_145344.json  user_profile_backup_20250416_145846.json  user_profile_backup_20250416_150153.json  user_profile_backup_20250416_150455.json  user_profile_backup_20250416_153927.json  user_profile_backup_20250416_154204.json  user_profile_backup_20250418_111116.json  user_profile_backup_20250418_111356.json  user_profile_backup_20250418_112358.json  user_profile_backup_20250418_112528.json  (+20 more)
backup_sqlite_modules/: face_auth.py  user_authentication.py
config/: app_config.py  config.py  constants.py  logging_config.py  logging_config.yaml  mini_project.code-workspace
database/: sequences.db  sequences.db-shm  sequences.db-wal
docs/: PostgreSQL_Schema_Overview.csv  algorithms.txt  full_project_combined_script.txt  notes.txt  project_structure.csv  scripts.txt  structure.txt  system_schema_grouped.dbml  thesisProposal.docx
experimental/: synchronizer.py  test_face_auth.py
mini_project/: __main__.py  camera_vision_test.py  db_handler.py  face_auth.py  gesture_processor.py  user_authentication.py  video_processor.py  voice_auth.py
old_scripts/: camera_vision_pgSQL_rs.py  db_handler_postgreSQL_old.py  face_auth.py  face_auth_CLI.py  face_utils.py  gesture_processor multihands.py  gesture_processor.py  main.py  task_manager.py  voice_processor.py  voice_processor_copy.py
pgAdmin_test/: camera_db_utils.py  camera_vision.py  db_handler_postgreSQL.py  db_query_test.py
scripts/: _camera_vision_test.py  camera_db_utils.py  camera_vision.py  camera_vision_test.py  cv_slides_progress.py  db_handler.py  face_auth.py  face_auth_auto.py  face_utils.py  facial_auth.py  llm_processor.py  main.py  main_controller.py  task_manager.py  user_authentication.py  user_interface.py  video_processor.py  voice_auth.py  voice_processor.py  voice_recognition.py  xt_db_handler.py  xt_facial_auth.py
src/: face_auth.py  voice_auth.py
test/: test_face_auth.py  test_voice_auth.py  test_voice_processor.py
tests/: conftest.py  test_command_processor.py  test_db_pgSQL.py  test_synchronizer.py  test_voice_cli.py  test_voice_processor_pgSQL.py
(+199 files in other folders)
