[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini_project"
version = "0.1.0"
description = "A project for multimodal user authentication (face and voice)."
readme = "README.md"
authors = [
  { name = "Oscar Ikechukwu", email = "oscik559@student.liu.se" }
]
license = { file = "LICENSE" }
dependencies = [
  "opencv-python",
  "face_recognition",
  "faiss-cpu",
  "numpy",
  "sounddevice",
  "scipy",
  "SpeechRecognition",
  "resemblyzer"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["mini_project"]