[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini_project"
version = "0.1.0"
description = "Thesis: Integrating Computer Vision, LLMs, and Robotic Control for Personalized Task Execution in Virtual Environments."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Oscar Ikechukwu", email = "oscik559@student.liu.se" }
]
dependencies = [
  "opencv-python",
  "face_recognition",
  "faiss-cpu",
  "numpy",
  "sounddevice",
  "scipy",
  "SpeechRecognition",
  "resemblyzer"
]
keywords = [
  "authentication", "LLM", "face", "gesture", "voice", "multimodal", "SQLite", "database"
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
mini-gui = "mini_project.__main__:main"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.py$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["mini_project"]
multi_line_output = 3
include_trailing_comma = true
