[metadata]
name = mini_project
version = 0.1.0
description = Thesis: Integrating Computer Vision, LLMs, and Robotic Control for Personalized Task Execution in Virtual Environments.
long_description = file: README.md
long_description_content_type = text/markdown
author = Oscar Ikechukwu
author_email = oscik559@student.liu.se
license = MIT
keywords = authentication, LLM, face, gesture, voice, multimodal, SQLite, database
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true
python_requires = >=3.8

[options.packages.find]
where = 